--- a/resources/fxml/main_window.fxml
+++ b/resources/fxml/main_window.fxml
@@ -14,6 +14,6 @@
             </VBox>
          </content>
       </ScrollPane>
-      <ListView prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="200.0" />
+      <ListView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
