--- a/resources/fxml/main_window.fxml
+++ b/resources/fxml/main_window.fxml
@@ -1,20 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ScrollPane fx:id="scrlPn" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="195.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox fx:id="vbox" maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+            <VBox fx:id="vbox" fillWidth="false" maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
                <children>
                   <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addSubject" prefHeight="60.0" prefWidth="200.0" styleClass="addbutton" stylesheets="@../css/subjectbutton.css" text="Dodaj predmet" />
                </children>
             </VBox>
          </content>
       </ScrollPane>
-      <ListView fx:id="list" fixedCellSize="32.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
-      <VBox layoutX="448.0" prefWidth="30.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ListView fx:id="list" fixedCellSize="32.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="32.0" AnchorPane.topAnchor="0.0" />
+      <VBox layoutX="448.0" prefWidth="32.0" spacing="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#toBosnian" prefHeight="32.0" prefWidth="32.0" style="-fx-background-image: url('resources/Images/bosnia-and-herzegovina.png');">
+               <graphic>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <viewport>
+                        <Rectangle2D height="32.0" width="32.0" />
+                     </viewport>
+                     <image>
+                        <Image url="@../Images/bosnia-and-herzegovina.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#toEnglish" prefHeight="32.0" prefWidth="32.0">
+               <graphic>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/england.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#toGerman" prefHeight="32.0" prefWidth="32.0">
+               <graphic>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/germany.png" />
+                     </image></ImageView>
+               </graphic></Button>
+         </children></VBox>
    </children>
 </AnchorPane>
