--- a/resources/fxml/main_window.fxml
+++ b/resources/fxml/main_window.fxml
@@ -19,7 +19,7 @@
       <ListView fx:id="list" fixedCellSize="32.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="32.0" AnchorPane.topAnchor="0.0" />
       <VBox layoutX="448.0" prefWidth="32.0" spacing="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#toBosnian" prefHeight="32.0" prefWidth="32.0" style="-fx-background-image: url('resources/Images/bosnia-and-herzegovina.png');">
+            <Button fx:id="bosnianBtn" mnemonicParsing="false" onAction="#toBosnian" prefHeight="32.0" prefWidth="32.0" style="-fx-background-image: url('resources/Images/bosnia-and-herzegovina.png');">
                <graphic>
                   <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                      <viewport>
@@ -31,7 +31,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" onAction="#toEnglish" prefHeight="32.0" prefWidth="32.0">
+            <Button fx:id="englishBtn" mnemonicParsing="false" onAction="#toEnglish" prefHeight="32.0" prefWidth="32.0">
                <graphic>
                   <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -40,7 +40,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" onAction="#toGerman" prefHeight="32.0" prefWidth="32.0">
+            <Button fx:id="germanBtn" mnemonicParsing="false" onAction="#toGerman" prefHeight="32.0" prefWidth="32.0">
                <graphic>
                   <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                      <image>
